--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-commons</artifactId>
+		    <version>2.7.2</version>
+		</dependency>
+
+		
 		<!-- [for Connection Pool]  -->
 		<dependency>
 		    <groupId>org.apache.tomcat</groupId>
